no solution yet fix, z-index fix

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   background-color: white;
   padding: 1em 0;
   margin-top: -1em;
+  z-index: 1;
 }
 
 .list-group-item, .nav-link {
